update algebra code from xfp, passes tests, need to isolate BigFraction